--- a/javascript-assignment.html
+++ b/javascript-assignment.html
@@ -6,15 +6,23 @@
 	</head>
 	<body>
 		<p id="taco">Every day is taco ipsum tuesday. Carne asada on corn tortillas. Ooh, with diced onions and a pinch of cilantro. It’s taco Tuesday Monday. 50 cent tacos! I’ll take 30. Say taco one more time. Add in a few el Pastor with guac and diced onions.</p>
-		<p>Shrimp tacos are tasty tacos! Tacos, tacos, tacos. Tacos Al pastor/De Adobada are made of thin pork steaks seasoned with adobo seasoning, then skewered and overlapped on one another on a vertical rotisserie cooked and flame-broiled as it spins.</p>
+		<p id="chile">Shrimp tacos are tasty tacos! Tacos, tacos, tacos. Tacos Al pastor/De Adobada are made of thin pork steaks seasoned with adobo seasoning, then skewered and overlapped on one another on a vertical rotisserie cooked and flame-broiled as it spins.</p>
 		<p>Add in a few el Pastor with guac and diced onions. Josh’s taco shack is the best taco shack. It’s raining tacos, from out of the sky, tacos, don’t even ask why.</p>
+		<!--Change the text to blue on click-->
 		<script>
-
 			document.getElementById('taco').onclick = changeTextColor;
-
 			function changeTextColor() {
 				document.body.style.color = "blue";
 				return;
+			}
+		</script>
+		<!--Find and replace taco with enchilada using a button-->
+		<button onclick="changeFood()">Pru&eacute;bala</button>
+		<script>
+			function changeFood() {
+				var find = document.getElementById("chile").innerHTML;
+				var change = find.replace("Taco", "Enchilada");
+				document.getElementById("chile").innerHTML = change;
 			}
 
 		</script>
